kubernetes/oci/compute/cluster/.argocd-state/longhorn/longhorn/templates/network-policies/recovery-backend-network-policy.yaml
---
# Source: longhorn/templates/network-policies/recovery-backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-recovery-backend
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/recovery-backend: longhorn-recovery-backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          longhorn.io/component: share-manager
    ports:
    - protocol: TCP
      port: 9503
