kubernetes/oci/compute/cluster/.argocd-state/longhorn/longhorn/templates/network-policies/webhook-network-policy.yaml
---
# Source: longhorn/templates/network-policies/webhook-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-webhook
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/admission-webhook: longhorn-admission-webhook
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9501
    - protocol: TCP
      port: 9502
